--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -5,17 +5,19 @@ block styles
 
 block content
     div.ez-row(class="css_height_100%_sm")
-        div.ez.bb.base-30-lg.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_lg(class="css_height_100%_sm")
-            div test1
-        div.ez.bb.base-100-sm.base-70-lg.main-aa-center.cross-aa-center(class="css_height_100%_sm")
+        div.ez.base-30-lg.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_lg.dashboard-side__dashboard(class="css_height_100%_sm")
+            img.css_max-width_300px_sm.css_max-width_300px_md.css_margin_20px_sm(src="/images/layout/logo-w.png", alt="")
+        div.ez.base-100-sm.base-70-lg.main-aa-center.cross-aa-center(class="css_height_100%_sm")
             div.ez-col.main-aa-center.cross-aa-center(class="css_height_100%_sm")
                 div.ez-row.main-aa-center.cross-aa-center.base-20-sm
-                    select#form-selector
+                    div.form-selector__dashboard
+                        select#form-selector
                 div.ez-col.cross-aa-center.main-aa-center.base-30-sm#formDataInputs
                 div.ez-row.base-20-sm.main-aa-center.cross-aa-center
-                    input#date(type='Date')
+                    div.date-input__dashboard
+                        input#date(type='Date')
                 div.ez-row.main-aa-sp-ar.cross-aa-center.base-20-sm
-                    button#dashboard-submit add letter
+                    button#dashboard-submit.add-letter__dashboard إضافة كتاب
 
                 
 
