--- a/views/download.pug
+++ b/views/download.pug
@@ -5,16 +5,16 @@ block styles
 
 block content
     div.ez-row(class="css_height_100%_sm")
-        div.ez.bb.base-40-md.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_md(class="css_height_100%_sm")
+        div.ez.base-40-md.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_md.download-side__download(class="css_height_100%_sm")
             div.ez
-        div.ez.bb.base-100-sm.base-60-md.main-aa-center.cross-aa-center(class="css_height_100%_sm")
+        div.ez.base-100-sm.base-60-md.main-aa-center.cross-aa-center(class="css_height_100%_sm")
             div.ez-col.cross-aa-center
                 img.css_max-width_300px_sm.css_max-width_400px_md(src="/images/layout/logo.png", alt="")
-                div.ez.main-aa-sp-ar.cross-aa-center
-                    a(href='/dashboard')
-                        button Go back to dashboard
-                    a(href=downloadLink)
-                        button Download the letter
+                div.ez.main-aa-sp-ar.cross-aa-center.wrap
+                    a.ez.base-100-sm.base-50-md.main-aa-center.css_text-decoration_none_sm(href='/dashboard')
+                        button.buttons__download العودة الى المكتب
+                    a.ez.base-100-sm.base-50-md.main-aa-center.css_text-decoration_none_sm(href=downloadLink)
+                        button.buttons__download تحميل الكتاب
 
 
 
