--- a/views/home.pug
+++ b/views/home.pug
@@ -4,11 +4,11 @@ block styles
 
 
 block content
-    div.ez-row(class="css_height_100%_sm")
-        div.ez.bb.base-50-md.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_md(class="css_height_100%_sm")
-            div test1
-        div.ez.bb.base-100-sm.base-50-md.main-aa-center.cross-aa-center(class="css_height_100%_sm")
-            div test2
+    div.ez-row.main__home(class="css_height_100%_sm")
+        div.ez.base-50-md.css_display_none_sm.main-aa-center.cross-aa-center.css_display_flex_md(class="css_height_100%_sm")
+            div.text__home بلدنا بصمتنا
+        div.ez.base-100-sm.base-50-md.main-aa-center.cross-aa-center(class="css_height_100%_sm")
+            img.css_max-width_300px_sm.css_max-width_500px_lg(src="/images/layout/logo-w.png", alt="")
 
 block scripts
         
