--- a/global/css/style.css
+++ b/global/css/style.css
@@ -27,6 +27,15 @@
     padding: 8px 16px; 
 }
 
+.nav-dd{
+    align-items: stretch;
+}
+
+
+.nav-dd .button__nav-bar{
+    width: 100%;
+}
+
 .nav-button{
     width: 40px;
     height: 40px;
