--- a/views/container.pug
+++ b/views/container.pug
@@ -24,8 +24,8 @@ html(lang="en")
             else
                 a.nav-link(href="/login")
                     button.nav-link-botton.button__nav-bar LogIn
-                //- a.nav-link(href="#")
-                //-     button.nav-link-botton.button__nav-bar SignUp
+                a.nav-link(href="/signup")
+                    button.nav-link-botton.button__nav-bar SignUp
             
         div.ez-container.full-width.content-holder
             block content
