--- a/global/css/style.css
+++ b/global/css/style.css
@@ -366,3 +366,82 @@
     color: white;
 }
 
+.user-info-popup-background{
+    display: flexbox;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+
+.user-info-popup{
+    height: 330px;
+    background-color: white;
+    box-shadow: #333 2px 2px 2px 2px;
+    border-radius: 2px;
+    padding: 30px;
+}
+
+.user-info-popup-input{
+    height: 50px;
+    border: 3px solid #333;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px 2px #ccc;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.user-info-popup-input input{
+    width: 100%;
+    height: 100%;
+    font-size: 1.3rem;
+    padding: 0px 10px;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    border: 0px black solid;
+    color: #333;
+}
+
+.user-info-popup-input select{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    border: 0px black solid;
+    color: #333;
+    font-size: 1.3rem;
+}
+
+
+.user-info-popup button{
+    border:1.5px solid #43DEAF;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    color: #43DEAF;
+    font-size: 1.1rem;
+    font-weight: 600;
+    transition: 300ms all ease-in-out;
+    padding: 8px 16px; 
+    margin-top: 10px;
+}
+
+.user-info-popup button:hover{
+    background-color: #43DEAF;
+    color: white;
+}
+
+.exit-button{
+    font-size: 30px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.user-info-popup-error{
+    font-size: 18px;
+    color: red;
+}
