--- a/views/container.pug
+++ b/views/container.pug
@@ -30,6 +30,8 @@ html(lang="en")
                     //- for admins
                     a.nav-link(href="/accountmanagement")
                         button.nav-link-botton.button__nav-bar Accounts
+                    a.nav-link(href="/pathmanagement")
+                        button.nav-link-botton.button__nav-bar Paths
                     //- end for admins
 
                 if accoutnLevel < 1
